Modernize to Java 21 idioms (project targets 21, some code was still Java 11-ish)
- ~29 new Thread(...).start() one-shot background tasks converted to
  Thread.ofVirtual().name(...).start(...): BusyDialog (inherited by
  every BusyDialog.run() caller), UpdateChecker, KdbxSubprocessClient,
  ImportSessionsDialog, CredentialManagerDialog, GroupManagerDialog,
  KdbxImportDialog, MainWindow upload/download, MasterPasswordDialog,
  KdbxCredentialResolver, SessionsTab, TagManagerDialog, TerminalTab
  (paste-lines), SessionDialog. Left as platform threads on purpose:
  vault-autolock and kdbx-password-cache-sweep (reused periodic
  workers via ScheduledExecutorService) and TerminalTab's SSH read
  loop (lives for the whole connection, not a one-shot task).
- instanceof + explicit cast -> pattern-matching instanceof, 7 sites
  in SessionsTab.java (all the same "recurse into Composite children"
  shape) — the rest of the codebase already did this consistently.
- x != null ? x : default -> Objects.requireNonNullElse, ~16 sites in
  SessionStorage, CredentialStore, ConfigurationSettingsDialog,
  SessionsTab, TerminalTab, TagRegistry, InputDialog.
- TerminalTab.stripAnsi()'s switch (case:/break, the one holdout —
  everything else already used arrow syntax) -> arrow-style switch
  statement. Security-sensitive: this sanitizes remote-controlled
  bytes before they hit the session log.
- RemoteFileBrowserDialog.PickedFile -> record (genuinely immutable,
  never used outside this file) — updated MainWindow's 3 field-access
  call sites (pf.path/pf.size) to the record's accessor methods.
- ReleaseNotesHtml.CSS multi-concat string -> text block.

Every step compiled and was tested in isolation before moving to the
next; a broad regression sweep across all touched areas passed
afterward (two apparent failures in an earlier combined run —
TerminalTabLeakTest's thread count and TerminalTabRenderHandleLeakTest's
font-handle count — were confirmed as cross-test JVM-state
interference, no